load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_python",
    sha256 = "9d04041ac92a0985e344235f5d946f71ac543f1b1565f2cdbc9a2aaee8adf55b",
    strip_prefix = "rules_python-0.26.0",
    url = "https://github.com/bazelbuild/rules_python/releases/download/0.26.0/rules_python-0.26.0.tar.gz",
)

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    # Available versions are listed in @rules_python//python:versions.bzl.
    name = "python3_10",
    python_version = "3.10",
    register_coverage_tool = True,
)

load("@python3_10//:defs.bzl", python_interpreter = "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")


pip_parse(
    name = "pip_dependencies",
    python_interpreter_target = python_interpreter,
    requirements_lock = "//:requirements_lock.txt",
)

# Load the starlark macro which will define your dependencies.
load("@pip_dependencies//:requirements.bzl", install_pip_dependencies = "install_deps")

# Call it to define repos for your requirements.
install_pip_dependencies()

